--- a/newsroom.html
+++ b/newsroom.html
@@ -256,23 +256,18 @@
 </span>
 </a><div class="well col-xs-12">
 <h4>Newsroom Search</h4>
-  <form action="//www.msudenver.edu/newsroom/search/">
-  <input type="submit" name="search" value="Search" class="btn btn-default btn-small"/>
-  <div class="input-oneline">
-	<input type="hidden" name="cx" value="004867254463714202705:7eewc-qjr3g" />
-	<input type="hidden" name="cof" value="FORID:11" />
-	<input type="hidden" name="ie" value="UTF-8" />
-    <input type="text" name="q" class="input-small"/>
-  </div>
-</form>
-
-<!--   <form action="//www.msudenver.edu/newsroom/search/" class="form-search">
-  <input type="hidden" name="cx" value="004867254463714202705:7eewc-qjr3g" />
-  <input type="hidden" name="cof" value="FORID:11" />
-  <input type="hidden" name="ie" value="UTF-8" />
-    <input type="text" name="q" class="input-small"/>
-    <button type="submit" class="btn btn-default btn-small">Search</button>
-</form> -->
+<form class="custom-search-input" role="search" action="https://www.msudenver.edu/newsroom/search/">
+                        <div class="input-group">
+                          <input type="hidden" name="cx" value="004867254463714202705:7eewc-qjr3g" class="form-control" placeholder="Search">
+                          <input type="hidden" name="cof" value="FORID:11" class="form-control" placeholder="Search">
+                          <input type="hidden" name="ie" value="UTF-8" class="form-control" placeholder="Search">
+                          <label for="q" class="sr-only">Search Newsroom</label>
+                          <input type="text" id="q" class="form-control" name="q" placeholder="Search Newsroom" size="30">
+                          <span class="input-group-btn">
+                            <button type="submit" class="btn btn-default" id="qButton"><i class="fa fa-search"></i></button>
+                          </span>
+                         </div>
+                       </form>
 
 
 </div><div class="row">
