--- a/app/homepage.html
+++ b/app/homepage.html
@@ -335,6 +335,39 @@ Celebration of MSU Denver s <br>
 <!-- BEGINS  FOOTER -->
 <div w3-include-html="htmlcomponents/footer.html"></div>
     <!-- ENDS FOOTER -->
+
+
+<!-- BEGINS SECOND DEPENDENCY INCLUDE -->
+<!-- sidemenu.js  -->
+<script type="text/javascript" src="https://msudenver.edu/media/prod/js/sidemenu.js"></script>
+<!-- modernizr -->
+<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/modernizr/modernizr.custom.38346.js"></script>
+<!-- bootstrap.js -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+<!-- console.polyfill -->
+<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/console-polyfill/index.js"></script>
+<!-- main.min.js -->
+<script type="text/javascript" src="https://msudenver.edu/media/prod/js/main.min.js"></script>
+<!-- match.min.js -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.0/jquery.matchHeight-min.js"></script>
+
+<script type="text/javascript" src="jquery/HeaderHover.js"></script>
+<script type="text/javascript" src="jquery/HeaderSearchHide.js"></script>
+<script type="text/javascript" src="jquery/matchheightcustom.js"></script>
+
+
+              <script  type="text/javascript">
+  				$('.carousel').carousel({
+   					interval: 6500
+  						});
+			</script>
+
+
+<script>
+w3IncludeHTML();
+</script>
+
 <!-- This code must be installed within the body tags -->
 <script type="text/javascript">
     var lhnAccountN = "29468-1";
