--- a/app/homepage.html
+++ b/app/homepage.html
@@ -163,8 +163,29 @@
                     <span id="nav-search-close" class="glyphicon glyphicon-remove"></span>
                 </div>
             </div> <!-- search-input -->
+        </ul>
+            <!-- <div class="">
+                <form class="custom-search-input" role="search" action="https://www.msudenver.edu/search">
+                    <div class="input-group">
+                      <input type="hidden" name="cx" value="004867254463714202705:1ammfpknuzw" class="form-control" placeholder="Search">
+                      <input type="hidden" name="cof" value="FORID:11" class="form-control" placeholder="Search">
+                      <input type="hidden" name="ie" value="UTF-8" class="form-control" placeholder="Search">
+                      <label for="q" class="sr-only">Search MSU Denver site</label>
+                      <input type="text" id="q" class="form-control"  name="q"  placeholder="Search MSU Denver" size="30">
+                      <span class="input-group-btn">
+                        <button type="submit" class="btn btn-default" id="qButton"><i class="fa fa-search"></i></button>
+                      </span>
+                    </div>
+                </form>
+            </div> -->
+    </div>
+  </div>
+      <!--/.nav-collapse -->
+</div>
+</div>
 
 <!-- mobile search-input -->
+          <!-- <div id="content-nav"> -->
             <div id="search-input" class="inner-addon left-addon search-input-mobile">
                 <span class="glyphicon glyphicon-search glyphicon-opened"></span>
                       <input  id="search-text-mobile"
@@ -191,29 +212,10 @@
                     <span id="nav-search-close" class="glyphicon glyphicon-remove"></span>
                 </div>
             </div>
+          <!-- </div> -->
 <!-- end mobile search-input -->
 
 
-        </ul>
-            <!-- <div class="">
-                <form class="custom-search-input" role="search" action="https://www.msudenver.edu/search">
-                    <div class="input-group">
-                      <input type="hidden" name="cx" value="004867254463714202705:1ammfpknuzw" class="form-control" placeholder="Search">
-                      <input type="hidden" name="cof" value="FORID:11" class="form-control" placeholder="Search">
-                      <input type="hidden" name="ie" value="UTF-8" class="form-control" placeholder="Search">
-                      <label for="q" class="sr-only">Search MSU Denver site</label>
-                      <input type="text" id="q" class="form-control"  name="q"  placeholder="Search MSU Denver" size="30">
-                      <span class="input-group-btn">
-                        <button type="submit" class="btn btn-default" id="qButton"><i class="fa fa-search"></i></button>
-                      </span>
-                    </div>
-                </form>
-            </div> -->
-    </div>
-  </div>
-      <!--/.nav-collapse -->
-</div>
-</div>
 
 <script type="text/javascript">
 $('#search-text').keyup(function () {
@@ -223,6 +225,12 @@ $('#search-text').keyup(function () {
         $('#searchGoLink').addClass('disableGoButton');
     }
 });
+</script>
+
+<script type="text/javascript">
+  $('.glyphicon-search-mobile').click(function(){
+     $('.search-input-mobile').toggle();
+  });
 </script>
 
 <!-- *********************************  -->
