--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,10 @@
 
   <a href="homepage.html">Homepage Layout </a> <br>
 
-    <a href="2column.html">2 Column </a>
+    <a href="2column.html">2 Column </a><br>
+
+    <a href="studenthubhome.html">Student Hub</a><br>
+      <a href="studenthubsecondary.html">Student Hub Secondary Page</a><br>
 
     <!-- inject:head:html -->
      <!-- contents of html partials will be injected here -->
