--- a/app/studenthubhome.html
+++ b/app/studenthubhome.html
@@ -8,9 +8,11 @@
     <title>Student Hub | MSU Denver</title>
 
     <!-- Bootstrap -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,600,700,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" media="screen" href="/media/studenthub/css/student-hub-home.css" /><!--custom.css-->
+<link rel="stylesheet" type="text/css" media="screen" href="styles/studenthubhome.css" />
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
