--- a/app/studenthubsecondary.html
+++ b/app/studenthubsecondary.html
@@ -7,9 +7,10 @@
     <title>Experience | Student Hub | MSU Denver</title>
 
 	<!-- CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,600,700,300' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" media="screen" href="styles/studenthubsecondary.css" /><!--secondary-page.css-->
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/studenthubsecondary.css" />
 
 </head>
 <body>
