--- a/app/homepage.html
+++ b/app/homepage.html
@@ -230,9 +230,13 @@ $('#search-text').keyup(function () {
   $('.glyphicon-search-mobile').click(function(){
      $('.search-input-mobile').slideToggle();
      $('#content-nav').removeClass('in');
+     $('.fa-bars').css('background-color', 'transparent');
+     $('.glyphicon-search-mobile').css('background-color', '#005fae');
   });
   $('.navbar-toggle').click(function(){
      $('.search-input-mobile').hide();
+     $('.fa-bars').css('background-color', '#005fae');
+     $('.glyphicon-search-mobile').css('background-color', 'transparent');
   });
 </script>
 
