--- a/app/homepage.html
+++ b/app/homepage.html
@@ -138,32 +138,46 @@
 
 
         <!-- Hidden Search Bar-->
-            <div id="search-input" class="inner-addon left-addon search-input-desktop">
-                <span class="glyphicon glyphicon-search glyphicon-opened"></span>
-                      <input  id="search-text"
-                        name="zz"
-                        type="text"
-                        class="home-input"
-                        placeholder="SEARCH MSU DENVER"
-                        onkeyup="MODGLOBALS.HEADER.searchOnKeyUp(this, event)"
-                        onclick="return MODGLOBALS.HEADER.searchInputOnClick()"
-                        onblur="javascript:internalLabelBlur(this);"
-                        onfocus="javascript:internalLabelFocus(this);"
-                        tabindex="2";
-                        style="margin-left: -3px; outline: none;";
-                       >
-                <!-- AUTO SUGGEST -->
-                <!-- Code auto suggest server by DEV, PROD, etc. -->
+            <form action="https://www.msudenver.edu/search">
+              <div id="search-input" class="inner-addon left-addon search-input-desktop" role="search" action="https://www.msudenver.edu/search">
+                  <span class="glyphicon glyphicon-search glyphicon-opened"></span>
+                        <input  id="q"
+                          name="q"
+                          type="text"
+                          class="home-input"
+                          placeholder="SEARCH MSU DENVER"
+                          onkeyup="MODGLOBALS.HEADER.searchOnKeyUp(this, event)"
+                          onclick="return MODGLOBALS.HEADER.searchInputOnClick()"
+                          onblur="javascript:internalLabelBlur(this);"
+                          onfocus="javascript:internalLabelFocus(this);"
+                          tabindex="2";
+                          style="margin-left: -3px; outline: none;";
+                         >
+                  <!-- AUTO SUGGEST -->
+                  <!-- Code auto suggest server by DEV, PROD, etc. -->
 
-                <div id="autoSuggestResults"></div>
+                  <div id="autoSuggestResults"></div>
+                  <!-- END AUTO SUGGEST -->
+                  <!-- <div class="gobutton english-MOD">
+                      <a id="searchGoLink" class="button disableGoButton" onclick="MODGLOBALS.HEADER.searchGoLinkOnClick();" href="javascript:void(0)">Search</a>
+                      <span id="nav-search-close" class="glyphicon glyphicon-remove"></span>
+                  </div> -->
 
+                  <div class="gobutton">
+                    <a id="searchGoLink" class="disableGoButton">
+                      <button type="submit" class="button" id="qButton">SEARRCH</button>
+                    </a>
+                  </div>
+                  <span id="nav-search-close" class="glyphicon glyphicon-remove"></span>
+              </div> <!-- search-input -->
+            </form>
 
-                <!-- END AUTO SUGGEST -->
-                <div class="gobutton english-MOD">
-                    <a id="searchGoLink" class="button disableGoButton" onclick="MODGLOBALS.HEADER.searchGoLinkOnClick();" href="javascript:void(0)">Search</a>
-                    <span id="nav-search-close" class="glyphicon glyphicon-remove"></span>
-                </div>
-            </div> <!-- search-input -->
+<!-- DELETE THIS -->
+            <!-- <form action="https://www.msudenver.edu/search">
+                  <input id="q" name="q" placeholder="Search MSU DDenver" size="30" type="text">
+                    <button type="submit" class="btn btn-default" id="qButton"><i class="fa fa-search"></i></button>
+            </form> -->
+<!-- END DELETE THIS -->
         </ul>
     </div>
   </div>
@@ -203,8 +217,8 @@
 
 
 <script type="text/javascript">
-$('#search-text').keyup(function () {
-    if ($.trim($('#search-text').val()).length) {
+$('#q').keyup(function () {
+    if ($.trim($('#q').val()).length) {
         $('#searchGoLink').removeClass('disableGoButton');
     }
     else {
