--- a/app/homepage.html
+++ b/app/homepage.html
@@ -84,10 +84,12 @@
     </button>
     <div class="blue-header">
       <div class="container">
-        <div class="col-xs-9">
+        <div class="col-xs-8">
           <img class="msudenver_logo" src="http://sitemanager.msudenver.edu/media/assets/img/MSUdenver-logo.png" alt="MSU Denver Logo">
         </div>
-        <!-- <div class="col-xs-2 apply-button">APPLY</div> -->
+        <div class="col-xs-1 apply-button">APPLY</div>
+        <div class="col-xs-1 apply-button give-visit-buttons">GIVE</div>
+        <div class="col-xs-1 apply-button give-visit-buttons">VISIT</div>
         <span class="glyphicon glyphicon-search glyphicon-search-mobile"></span>
 
       </div>
@@ -96,17 +98,17 @@
       <div class="container">
          <ul class="nav navbar-nav navbar-center" >
            <li class="dropdown" id="nav-admissions">
-           <a class="mobile-header">ADMISSIONS <i class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></i></a>
+           <a class="mobile-header">ADMISSIONS <span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
              <ul class="dropdown-menu"><li><a href="/admissions/">Admissions</a></li><li><a href="/admissions/apply/first-timeundergraduate/">First-Time Undergraduate</a></li><li><a href="/admissions/apply/transfer/">Transfer Students</a></li><li><a href="/admissions/apply/internationalstudents/">International Students</a></li><li><a href="/admissions/apply/wichewue/">Wiche Wue</a></li><li><a href="/admissions/apply/masters/">Master&rsquo;s Programs</a></li><li><a href="/admissions/apply/militaryveteran/">Military Veterans</a></li><li><a href="/admissions/apply/adultstudents/">Adult Students</a></li><li><a href="/admissions/apply/re-admit/">Re-Admit</a></li><li><a href="/admissions/apply/non-degree/">Non-Degree</a></li><li><a href="/admissions/apply/concurrentlyenrolled/">Concurrently Enrolled</a></li><li><a href="/admissions/apply/metromeritus/">Metro Meritus</a></li></ul>
            </li>
 
            <li class="dropdown" id="nav-academics">
-             <a class="mobile-header">ACADEMICS<i class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></i></a>
+             <a class="mobile-header">ACADEMICS<span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
                <ul class="dropdown-menu"><li><a href="/academics/">Academics</a></li><li><a href="/academics/academicresources/">Academic Resources</a></li><li><a href="/fys/">First Year Success</a></li><li><a href="/commencement/">Graduation / Commencement</a></li><li><a href="/a-to-z/majors.shtml">Majors &amp; Minors</a></li><li><a href="/academics/schedulescalendarscatalogs/">Schedules, Calendars &amp; Catalogs</a></li><li><a href="/academics/specialprograms/">Special Programs</a></li><li><a href="/las/">College of Letters, Arts and Sciences</a></li><li><a href="/business/">College of Business</a></li><li><a href="/cps/">College of Professional Studies</a></li><li><a href="/education/">School of Education</a></li></ul>
            </li>
 
            <li class="dropdown" id="nav-campus">
-             <a class="mobile-header">CAMPUS LIFE<i class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></i></a>
+             <a class="mobile-header">CAMPUS<span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
              <ul class="dropdown-menu"><li><a href="/campuslife/">Campus Life</a></li><li><a href="/asa/">Academic and Student Affairs</a></li><li><a href="/campuslife/academicsupport/">Academic Support</a></li><li><a href="/events/">Events &amp; Calendars</a></li><li><a href="/admissions/cost/">Cost</a></li><li><a href="/campuslife/wellnessrecreation/">Health &amp; Counseling</a></li><li><a href="/campuslife/helpfulresources/">Helpful Resources</a></li><li><a href="/campuslife/involvementrecreation/">Involvement &amp; Recreation</a></li><li><a href="/studentactivities/">Student Activities</a></li><li><a href="/studentengagementandwellness/">Student Engagement and Wellness</a></li><li><a href="/campuslife/studentpublications/">Student Media</a></li></ul>
 
            </li>
@@ -121,7 +123,7 @@
 
            <li class="dropdown" id="nav-alumni">
 
-             <a class="mobile-header">ALUMNI &#38; FRIENDS<i class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></i></a>
+             <a class="mobile-header">ALUMNI &#38; DONORS<span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
              <ul class="dropdown-menu"><li><a href="/alumni/">Alumni</a></li><li><a href="/alumni/contactus/">Contact Us</a></li><li><a href="/alumni/careerservices/">Career Services</a></li><li><a href="/alumni/events/">Events</a></li><li><a href="/alumni/continuingeducation/">Continuing Education</a></li><li><a href="/alumni/studentalumniassociation/">Student Alumni Association</a></li><li><a href="/alumni/give/">Give</a></li><li><a href="/alumni/alumnibenefits/">Alumni Benefits</a></li></ul>
 
            </li>
@@ -129,8 +131,8 @@
 
             <li class="dropdown last" id="nav-faculty">
 
-                <a class="mobile-header">FACULTY &#38; STAFF<i class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></i></a>
-                <ul class="dropdown-menu"><li><a href="/about">Faculty &#38; Staff</a></li><li><a href="/factsheet/">MSU Denver at a glance</a></li><li><a href="/about/strategicplan2020/">Strategic Plan 2020</a></li><li><a href="/trustees/">Board of Trustees</a></li><li><a href="/working/">Employment</a></li><li><a href="http://www.msudenver.edu/events">Events Calendar</a></li><li><a href="/giving/">The Foundation - Giving to MSU Denver</a></li><li><a href="/commencement/">Graduation / Commencement</a></li><li><a href="/newsroom/">Newsroom</a></li><li><a href="/president/">President</a></li><li><a href="/50/">Our Past</a></li><li><a href="/contact/">Questions / Comments</a></li><li><a href="/visit/">Visit MSU Denver</a></li></ul>
+                <a class="mobile-header">EMPLOYEES<span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
+                <ul class="dropdown-menu"><li><a href="/about">Employees</a></li><li><a href="/factsheet/">MSU Denver at a glance</a></li><li><a href="/about/strategicplan2020/">Strategic Plan 2020</a></li><li><a href="/trustees/">Board of Trustees</a></li><li><a href="/working/">Employment</a></li><li><a href="http://www.msudenver.edu/events">Events Calendar</a></li><li><a href="/giving/">The Foundation - Giving to MSU Denver</a></li><li><a href="/commencement/">Graduation / Commencement</a></li><li><a href="/newsroom/">Newsroom</a></li><li><a href="/president/">President</a></li><li><a href="/50/">Our Past</a></li><li><a href="/contact/">Questions / Comments</a></li><li><a href="/visit/">Visit MSU Denver</a></li></ul>
 
             </li>
 
@@ -241,13 +243,13 @@ $('.search-text-mobile').focusout(function () {
 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
  <div class="item calls-to-action">
 
-<h3><a href="/admissions"> Apply Now <i class="fa fa-angle-right"></i></a></h3>
+<h3><a href="/admissions"> Apply Now <span class="fa fa-angle-right"></span></a></h3>
 	<hr>
-<h3><a href="/admissions/requestinfo/"> Request Information <i class="fa fa-angle-right"></i></a></h3>
+<h3><a href="/admissions/requestinfo/"> Request Information <span class="fa fa-angle-right"></span></a></h3>
 	<hr>
-<h3><a href="/admissions/contact/"> Contact Admissions <i class="fa fa-angle-right"></i></a></h3>
+<h3><a href="/admissions/contact/"> Contact Admissions <span class="fa fa-angle-right"></span></a></h3>
 	<hr>
-<h3><a href="/admissions/takeatour/"> Visit Us <i class="fa fa-angle-right"></i></a></h3>
+<h3><a href="/admissions/takeatour/"> Visit Us <span class="fa fa-angle-right"></span></a></h3>
   <hr>
 <br>
   <h3><a href="/50">
@@ -347,7 +349,7 @@ Celebration of MSU Denver s <br>
     </a>
 </div>
 <hr>
-        <h4><a href="/newsroom">SEE ALL NEWS <i class="fa fa-angle-right"></i></a><h4>
+        <h4><a href="/newsroom">SEE ALL NEWS <span class="fa fa-angle-right"></span></a><h4>
     </div>
     <div role="tabpanel" class="tab-pane" id="homepage_events">
 
@@ -355,7 +357,7 @@ Celebration of MSU Denver s <br>
            <div class="calendar">
 
 </div>
-      <h4><a href="/events">SEE ALL EVENTS <i class="fa fa-angle-right"></i></a><h4>
+      <h4><a href="/events">SEE ALL EVENTS <span class="fa fa-angle-right"></span></a><h4>
     </div>
   </div>
 </div>
