--- a/app/homepage.html
+++ b/app/homepage.html
@@ -99,7 +99,7 @@
         <ul class="nav navbar-nav navbar-center dropdown" >
           <li id="nav-faculty">
             <a class="mobile-header">ABOUT<span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
-            <ul>
+            <ul class="pushdown-menu">
               <li><a href="/about">About</a></li>
               <li><a href="/about/strategicplan2020/">Strategic Plan 2020</a></li>
               <li><a href="/president/">Office of the President</a></li>
@@ -111,7 +111,7 @@
            </li>
            <li id="nav-admissions">
              <a class="mobile-header">ADMISSIONS <span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
-             <ul>
+             <ul class="pushdown-menu">
                <li><a href="/admissions/">Admissions</a></li>
                <li><a href="/admissions/apply/first-timeundergraduate/">First-Time Undergraduate</a></li>
                <li><a href="/admissions/apply/transfer/">Transfer Students</a></li>
@@ -128,7 +128,7 @@
            </li>
            <li id="nav-academics">
              <a class="mobile-header">ACADEMICS<span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
-             <ul>
+             <ul class="pushdown-menu">
                <li><a href="/programs/">Academic Programs</a></li>
                <li><a href="/las/">College of Letters, Arts and Sciences</a></li>
                <li><a href="/cps/">College of Professional Studies</a></li>
@@ -144,7 +144,7 @@
            </li>
            <li id="nav-campus">
              <a class="mobile-header">CAMPUS<span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
-             <ul>
+             <ul class="pushdown-menu">
                <li><a href="/campuslife/">Campus Life</a></li>
                <li><a href="/studentactivities/">Student Activities</a></li>
                <li><a href="/campuslife/wellnessrecreation/">Health &amp; Counseling</a></li>
@@ -156,7 +156,7 @@
            </li>
            <li id="nav-alumni">
              <a class="mobile-header">ALUMNI &#38; DONORS<span class="fa fa-chevron-down pull-right chevron-pulldown" aria-hidden="true"></span></a>
-             <ul>
+             <ul class="pushdown-menu">
                <li><a href="/alumni/">Alumni</a></li>
                <li><a href="">Donors</a></li>
                <li><a href="/alumni/careerservices/">Career Services</a></li>
